@@ -275,6 +275,16 @@ Example:</p>
 </div>
 </div></blockquote>
 </dd>
+<dt><code class="docutils literal notranslate"><span class="pre">bin((variable,</span> <span class="pre">...))</span></code></dt>
+<dd><p class="first">Same as above, but each bin is defined by the unique combinations
+of values from the variables in the list.
+Example:</p>
+<blockquote class="last">
+<div><div class="line-block">
+<div class="line"><code class="docutils literal notranslate"><span class="pre">bin((year,</span> <span class="pre">month))</span></code></div>
+</div>
+</div></blockquote>
+</dd>
 <dt><code class="docutils literal notranslate"><span class="pre">bin(collocation-result-file,</span> <span class="pre">a|b)</span></code></dt>
 <dd><p class="first">For all variables in a product perform an averaging in the time
 dimension such that all samples in the same bin get averaged.
